--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Autók</title>
 </head>
 <body>
-    <div class="container-fluid text-blue">
+    <div class="container-fluid bd-dark text-blue">
         <h1>Szuper sportautók bemutatása</h1>
     </div>
 
